# dynofuzz

./: .gitignore  README.md  fuzz.sh  pyproject.toml  setup.cfg
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml
autoinf/: README.md
autoinf/autoinf/inference/: .gitignore  api_parsing.py  configs.py  invocations.py  nnsmith_rules.py  rules.py  strict_input_solve.py  symbl_int_solve.py  tree.py  utils.py
autoinf/autoinf/instrument/: README.md  categorize.py  collect.py  gen_tf_test_cmd.py  instr_tf.py  instr_torch.py  op.py  (+1 more)
autoinf/eval/: count_aug.py  count_collection.py  inst_2_num_records_from_collection.json  plot_aug.py  valid_apis.json
dynofuzz/: __init__.py  error.py  filter.py  gir.py  graph_gen.py  logging.py  narrow_spec.py  util.py
dynofuzz/abstract/: arith.py  dtype.py  extension.py  op.py  tensor.py
dynofuzz/autoinf/: __init__.py
dynofuzz/backends/: __init__.py  factory.py  iree.py  onnxruntime.py  tensorrt.py  tflite.py  torchcomp.py  torchjit.py  tvm.py  xla.py
dynofuzz/cli/: dtype_test.py  fuzz.py  model_exec.py  model_gen.py
dynofuzz/config/: main.yaml
dynofuzz/materialize/: __init__.py
experiments/: concat_exp.py  evaluate_models.py  genstat.py  scatter.py  viz_merged_cov.py
requirements/sys/: torch.txt  tvm.txt
tests/core/: test_gir.py  test_native_pickable.py
tests/mock/: filter_patch.py
tests/tensorflow/: test_dump_load.py  test_iree_backend.py  test_tflite_backend.py  test_xla_backend.py
tests/torch/: test_dump_load.py  test_ort_backend.py  test_trt_backend.py  test_tvm_backend.py
(+16 files in other folders)
