[metadata]
name = dynofuzz
description = "Automatic DNN generation for fuzzing and more."
long_description = file: README.md
long_description_content_type = text/markdown
platform = any

[options]
packages = find:
python_requires = >=3.6
dependency_links =
install_requires =
    z3-solver>=4.11.0
    hydra-core>=1.1.0
    hydra_colorlog
    multipledispatch
    appdirs

# TODO: make it nightly.
[options.extras_require]
onnx = torch
       onnx
ort = onnxruntime
      torch
      onnx
tf = tf-nightly
torch = torch
tvm = apache-tvm
      torch
      onnx
iree = tf-nightly
       iree-compiler
       iree-runtime
       iree-tools-tf

[options.package_data]
dynofuzz = config/**/*.yaml

[options.entry_points]
console_scripts =
    dynofuzz.model_gen = dynofuzz.cli.model_gen:main
    dynofuzz.model_exec = dynofuzz.cli.model_exec:main
    dynofuzz.dtype_test = dynofuzz.cli.dtype_test:main
    dynofuzz.fuzz = dynofuzz.cli.fuzz:main
